[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
nltk = "^3.8.1"
numpy = "^1.26.3"
pandas = "^2.2.0"
psycopg2-binary = "^2.9.9"
streamlit = "^1.30.0"
streamlit-aggrid = "0.3.4.post3"
openpyxl = "3.1.2"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[db]
host="db.yjolqcetitlpjbwwxnly.supabase.co"
port="5432"
dbname="postgres"
user="postgres"
password="superDev1!@#$%^&"
